--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
+    "react-native-x-carousel": "^1.0.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   },
