--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
     "react-native-x-carousel": "^1.0.1",
